--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,18 @@
 {
   "projects": {
     "default": "games-e8218"
-  }
+  },
+  "targets": {
+    "games-e8218": {
+      "hosting": {
+        "page2": [
+          "lsy-test-page-2"
+        ],
+        "page1": [
+          "lsy-test-page-1"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
