--- a/.firebaserc
+++ b/.firebaserc
@@ -10,6 +10,12 @@
         ],
         "page1": [
           "lsy-test-page-1"
+        ],
+        "dev-raising-lovee": [
+          "dev-raising-lovee"
+        ],
+        "raising-lovee": [
+          "raising-lovee"
         ]
       }
     }
