--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-typescript": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "pixi.js": "^7.3.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.2",
     "webpack-dev-server": "^4.15.1"
