--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "moduleResolution": "node",
     "jsx": "react"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
