--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
@@ -28,6 +30,7 @@
     "babel-loader": "^9.1.3",
     "i18next": "^23.7.7",
     "idb": "^8.0.0",
+    "lit": "^3.1.0",
     "pixi.js": "^7.3.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.2",
