--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 // tsconfig.json
 {
   "compilerOptions": {
-    "target": "es5",
+    "strictPropertyInitialization": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "ES2015",
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
